Sandbox/07-04-2025/force-app/main/default/objects/Adjustment_Transaction__c/Adjustment_Transaction__c.object-meta.xml
<CustomObject>
    <label>Adjustment Transaction</label>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Adjustment Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adjustment Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>