Sandbox/07-04-2025/force-app/main/default/objects/Adjustment_Transaction__c/fields/Branded_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Branded_Adjustment_Amount__c</fullName>
    <label>Branded Adjustment Amount</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>