Sandbox/07-04-2025/force-app/main/default/objects/Adjustment_Transaction__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>Month</label>
    <length>255</length>
    <type>Text</type>
</CustomField>