Sandbox/07-04-2025/force-app/main/default/objects/Adjustment_Transaction__c/fields/Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Amount__c</fullName>
    <label>Revenue Amount</label>
    <precision>16</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>