Sandbox/07-04-2025/force-app/main/default/objects/Adjustment_Transaction__c/fields/Segment_Category__c.field-meta.xml
<CustomField>
    <fullName>Segment_Category__c</fullName>
    <label>Segment Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>