Sandbox/07-04-2025/force-app/main/default/objects/Adjustment_Transaction__c/fields/Supply_Database__c.field-meta.xml
<CustomField>
    <fullName>Supply_Database__c</fullName>
    <label>Supply Database</label>
    <referenceTo>Supply_Database__c</referenceTo>
    <relationshipLabel>Adjustment Transactions</relationshipLabel>
    <relationshipName>Adjustment_Transactions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>